--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css" />
+    <script src="app.js" defer></script>
   </head>
   <body>
     <header>
@@ -13,25 +14,28 @@
     </header>
     <div class="main-body">
         <div class="calculator">
-            <div><input type="text" size="80%" ></div>
+            <div><input type="text"  id="outputScreen"  size="100%"></div>
 
             <div class="arthmatic-grid">
                 <button class="arth">7</button>
                 <button class="arth">8</button>
                 <button class="arth">9</button>
-                <button class="arth">/</button>
+                <button class="arth">C</button>
                 <button class="arth">4</button>
                 <button class="arth">5</button>
                 <button class="arth">6</button>
-                <button class="arth">*</button>
+                <button class="arth">/</button>
                 <button class="arth">1</button>
                 <button class="arth">2</button>
                 <button class="arth">3</button>
+                <button class="arth">*</button>
+                 <button class="arth">0</button>
                 <button class="arth">-</button>
-                <button class="arth">0</button>
                 <button class="arth">.</button>
-                <button class="arth">=</button>
                 <button class="arth">+</button>
+                <button class="arth">=</button>
+                
+                
 
             </div>
 
